--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "extension-boilerplate",
+  "name": "browser-extension-boilerplate",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "A browser extension boilerplate with React, TypeScript, Vite and Tailwind CSS",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,10 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.248",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.3",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -22,6 +26,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "fs-extra": "^11.1.1",
+    "path": "^0.12.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
