--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/fs-extra": "^11.0.3",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
@@ -30,6 +31,8 @@
     "fs-extra": "^11.1.1",
     "path": "^0.12.7",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
