--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build:dev": "tsc && vite build -w --mode development",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:hmr": "rollup --config utils/helpers/hmr/rollup.config.ts --configPlugin typescript --watch",
+    "start:hmr": "nodemon --watch utils/helpers/hmr/server.js utils/helpers/hmr/server.js",
+    "start:dev": "concurrently \"npm run build:hmr\" \"npm run start:hmr\" \"npm run build:dev\""
   },
   "dependencies": {
     "@types/chrome": "^0.0.248",
@@ -17,24 +21,32 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/fs-extra": "^11.0.3",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/ws": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "chokidar": "^3.5.3",
+    "concurrently": "^8.2.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "fs-extra": "^11.1.1",
+    "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "rollup": "^4.1.6",
     "tailwindcss": "^3.3.4",
+    "tslib": "^2.6.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "ws": "^8.14.2"
   }
 }
